--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
+			<artifactId>slf4j-simple</artifactId>
 			<version>1.8.0-beta1</version>
 		</dependency>
 	</dependencies>
